force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Control_Instance__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Control_Instance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control Instance</label>
    <type>Checkbox</type>
</CustomField>