force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Development_Environment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Development_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Development Environment</label>
    <type>Checkbox</type>
</CustomField>