force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Instance_ID__c</fullName>
    <label>Instance ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>