force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Instance_Name__c</fullName>
    <label>Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>