force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Instance_URL__c</fullName>
    <label>Instance URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>