force-app/main/default/objects/PDRI__Managed_Environment__c/fields/PDRI__License_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__License_Type__c</fullName>
    <label>License Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>