force-app/main/default/objects/PDRI__Managed_Environment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PDRI__Instance_ID__c</columns>
    <columns>PDRI__Instance_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>